# clockcheck

./: .gitignore  README.md  pyproject.toml
config/: config.toml  config_fish.toml  config_orpheus.toml  config_whisper.toml
notebooks/: create_dataset.ipynb  ds_failed_text_only.csv  grade-dataset.ipynb  test-transcribe-oai.ipynb  test-whisper.ipynb
src/clockcheck/: harness.py
src/clockcheck/models/: __init__.py  contract.py  openai_tts.py
src/clockcheck/transcribers/: __init__.py  contract.py  openai_asr.py  whisper_cpp.py
src/clockcheck/utils/: config.py
train/: Sesame_CSM_(1B)_TTS.ipynb  grpo.py  pyproject.toml
