[project]
name = "clockcheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "openai>=1.82.1",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
